--- a/settings/toolbox.conf
+++ b/settings/toolbox.conf
@@ -770,7 +770,7 @@ check_command  = perl smtp-user-enum.pl -h
 name           = snmpwn
 description    = SNMPv3 User enumerator and Attack tool
 target_service = snmp
-virtualenv     = ruby-3.2
+#virtualenv     = ruby-3.2
 install        = git clone https://github.com/hatlord/snmpwn.git . && rbenv local 3.2.0 && bundle exec gem install bundler && bundle install
 update         = git pull && bundle exec gem install bundler && bundle install
 check_command  = rbenv local 3.2.0 && bundle exec ruby snmpwn.rb --help
@@ -779,7 +779,7 @@ check_command  = rbenv local 3.2.0 && bundle exec ruby snmpwn.rb --help
 name           = snmp-check
 description    = SNMP enumerator
 target_service = snmp
-virtualenv     = ruby-3.2
+#virtualenv     = ruby-3.2
 install        = wget https://gitlab.com/kalilinux/packages/snmpcheck/-/raw/kali/master/snmpcheck-1.9.rb -O snmpcheck.rb; rbenv local 3.2.0 && gem install snmp
 check_command  = rbenv local 3.2.0 && ruby snmpcheck.rb -h
 
